2004-07-21 10:07  fredo

	* lib/PDF/API2.pm: added devicen colorspace

2004-07-20 22:31  fredo

	* MANIFEST: deleted changelog.pre added devicen.pm

2004-07-20 22:28  fredo

	* lib/PDF/API2/Resource/ColorSpace/Separation.pm: added tintname
	  accessor

2004-07-20 22:27  fredo

	* lib/PDF/API2/Resource/ColorSpace/DeviceN.pm,
	  examples/033_deviceN: genesis

2004-07-15 16:35  fredo

	* lib/PDF/API2/Resource/ColorSpace.pm: added type accessor

2004-07-15 16:28  fredo

	* lib/PDF/API2.pm: added devicen colorspace

2004-07-15 16:14  fredo

	* lib/PDF/API2/Resource/ColorSpace/Separation.pm: added type and
	  color accessor

2004-07-15 16:13  fredo

	* lib/PDF/API2/Resource/ColorSpace/Indexed.pm: added type accessor

2004-07-13 20:09  fredo

	* t/020corecoit.t, t/020corecour.t, t/020coreheit.t,
	  t/020coretiro.t, t/020corevebi.t, t/020coreverd.t,
	  t/022core____.t, t/028psf_all.t, .cvsignore, .project, Makefile,
	  t/020corecobi.t, t/020corecobo.t, t/020corehebi.t,
	  t/020corehebo.t, t/020corehelv.t, t/020coretibi.t,
	  t/020coretibo.t, t/020coretiit.t, t/020coretrbi.t,
	  t/020coretrbo.t, t/020coretreb.t, t/020coretrit.t,
	  t/020corevebo.t, t/020coreveit.t, t/029ttf_all.t: genesis

2004-06-22 03:33  fredo

	* lib/PDF/API2.pm: corrected spelling

2004-06-22 02:38  fredo

	* lib/PDF/API2/Resource/: Pattern.pm, Shading.pm: fixed ISA

2004-06-22 00:40  fredo

	* MANIFEST: added pattern/shading

2004-06-22 00:33  fredo

	* lib/PDF/: API2.pm, API2/Content.pm, API2/Util.pm,
	  API2/Resource/Pattern.pm, API2/Resource/Shading.pm: added basic
	  pattern/shading handling

2004-06-22 00:25  fredo

	* lib/PDF/API2/Resource/Font/CoreFont.pm: added custom corefont
	  handling

2004-06-15 18:48  fredo

	* MANIFEST: removed shapes

2004-06-15 18:44  fredo

	* lib/PDF/API2/Basic/PDF/File.pm: jaws import workaround fix for
	  broken xrefs

2004-06-15 11:16  fredo

	* MANIFEST: removed Version.pm

2004-06-15 11:14  fredo

	* lib/PDF/API2/: Basic/TTF/Maxp.pm, Basic/TTF/Mort.pm,